--- a/history.html
+++ b/history.html
@@ -5,6 +5,8 @@
     <link href='https://fonts.googleapis.com/css?family=Cormorant Infant' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+    <title>История</title>
+    <link rel="shortcut icon" href="logo.png" />
 </head>
 <body>
     <div class="left">
@@ -17,6 +19,7 @@
                 <i class="material-icons">account_balance</i></a></li>
             <chosen><li><a href="history.html">История<br>
                 <i class="material-icons">storage</i></a></li></chosen>
+            <img src="logo.png" width="100" height="100"/>
         </ul>
     </div>
     <div class="head_title">
