--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
 	<link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Cormorant Infant' rel='stylesheet'>
+    <title>Авторизация</title>
+    <link rel="shortcut icon" href="logo.png" />
 </head>
 <body>
     <header>Авторизация</header>
     <div id="square">
-    <div id="login">
-        <form action="javascript:void(0);" method="get">
-            <fieldset class="clearfix">
-                <p><span class="fontawesome-user">Логин: </span><input type="text" value="Иван123" onBlur="if(this.value == '') this.value = 'Логин'" onFocus="if(this.value == 'Логин') this.value = ''" required></p> <!-- JS because of IE support; better: placeholder="Username" -->
-                <p><span class="fontawesome-lock">Пароль: </span><input type="password"  value="Пароль" onBlur="if(this.value == '') this.value = 'Пароль'" onFocus="if(this.value == 'Пароль') this.value = ''" required></p> <!-- JS because of IE support; better: placeholder="Password" -->
-                <p><input type="submit" value="Вход" formaction="sender.html"></p>
-            </fieldset>
-        </form>
-    </div>   
+        <div id="login">
+            <form action="javascript:void(0);" method="get">
+                <fieldset class="clearfix">
+                    <p><span class="fontawesome-user">Логин: </span><input type="text" value="Иван123" onBlur="if(this.value == '') this.value = 'Логин'" onFocus="if(this.value == 'Логин') this.value = ''" required></p> <!-- JS because of IE support; better: placeholder="Username" -->
+                    <p><span class="fontawesome-lock">Пароль: </span><input type="password"  value="Пароль" onBlur="if(this.value == '') this.value = 'Пароль'" onFocus="if(this.value == 'Пароль') this.value = ''" required></p> <!-- JS because of IE support; better: placeholder="Password" -->
+                    <p><input type="submit" value="Вход" formaction="sender.html"></p>
+                </fieldset>
+            </form>
+        </div>
+        <img src="logo.png" width="100" height="100"/>
     </div>
 </body>
 </html>
