--- a/sender.html
+++ b/sender.html
@@ -5,6 +5,8 @@
     <link href='https://fonts.googleapis.com/css?family=Cormorant Infant' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Рассылка клиентам</title>
+    <link rel="shortcut icon" href="logo.png" />
 </head>
 <body>
     <div class="left">
@@ -18,6 +20,7 @@
                 <i class="material-icons">account_balance</i></a></li>
             <li><a href="history.html">История<br>
                 <i class="material-icons">storage</i></a></li>
+            <img src="logo.png" width="100" height="100"/>
         </ul>
     </div>
     <div class="head_title">
@@ -50,9 +53,13 @@
             Тип клиента<br>
             <div id="square">
                 <a>
-                    <input type="radio" id="sms" name="client-type" value="SMS" checked />
+                    <input type="radio" id="sms" name="client-type" value="новые" checked />
                     <label for="sms">новые</label><br>
-                    <input type="radio" id="whatsapp" name="client-type" value="WhatsApp" />
+                    <input type="radio" id="telegram" name="client-type" value="давние" />
+                    <label for="telegram">давние</label><br>
+                    <input type="radio" id="mail" name="client-type" value="постоянные" />
+                    <label for="mail">постоянные</label><br>
+                    <input type="radio" id="whatsapp" name="client-type" value="все" />
                     <label for="whatsapp">все</label><br>
                 </a>
             </div>
